--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -1,1 +1,102 @@
-<p>switches works!</p>
+<h2>Template: Switches</h2>
+
+<form #miFormulario="ngForm">
+
+    <!-- radios -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Genero</label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                       value="M"
+                       [(ngModel)]="persona.genero"
+                       name="radioGenero" 
+                       requiered
+                       id="radioMasculino">
+                <label class="form-check-label" for="flexRadioDefault1">
+                  Masculino
+                </label>
+              </div>
+              <div class="form-check">
+                <input  class="form-check-input" 
+                        type="radio" 
+                        value="F"
+                        [(ngModel)]="persona.genero"
+                        name="radioGenero" 
+                        requiered
+                        id="radioFemenino">
+                <label class="form-check-label" for="flexRadioDefault2">
+                  Femenino
+                </label>
+              </div>
+        </div>
+    </div>
+
+    <!-- Switches -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Notificaciones</label>   
+        <div class="col-sm-9">
+            <div class="form-check form-switch mt-2">
+                <input class="form-check-input" 
+                       type="checkbox"  
+                       role="switch"
+                       name="notificaciones"
+                       [(ngModel)]="persona.notificaciones"    
+                       id="flexSwitchCheckChecked" >
+
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- check Box -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"></label>   
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="checkbox"
+                       name="terminosYcondiciones"
+                       [(ngModel)]="terminosYcondicioes"
+                       id="flexCheckDefault"
+                       requiered>
+
+                <label class="form-check-label" for="flexCheckDefault">
+                  Terminos y condiciones de uso
+                </label>
+              </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="row-sm-9">
+            <button class="btn btn-primary float-end"
+                    [disabled]="miFormulario.invalid">
+                     Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+
+<h5>Valor del formulario</h5>
+<pre>{{miFormulario.value | json}}</pre>
+<br>
+
+<h5>Persona</h5>
+<pre>{{persona | json}}</pre>
+<br>
+
+
+<h5>Valid</h5>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+
+<h5>Terminos</h5>
+<pre>{{miFormulario.controls['terminosYcondiciones'].errors| json}}</pre>
+<h5>terminos y condiciones</h5>
+<pre>{{terminosYcondicioes}}</pre>
+<br>
+
+
