dinamicos forms done

--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,77 @@
-<p>dinamicos works!</p>
+<h2>template: <small>Dinamicos</small></h2>
+
+
+
+<form autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="guardar()">
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input  type="text" class="form-control"
+                    formControlName="nombre"
+                    placeholder="Nombre de la persona">
+                    <span class="form-text text-danger"
+                          *ngIf="mensajeError('nombre')">
+                        Este campo es obligatorio!!!
+                    </span>
+        </div>
+    </div>
+
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+            <div class="input-group">
+                <input type="text" class="form-control"
+                       placeholder="Agregar Favorito"
+                       [formControl]="nuevoFavorito">
+
+                <button class="btn btn-outline-primary"
+                        type="button"
+                        (click)="agregarNuevoFav()">Agregar</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9" formArrayName="favoritos">
+
+            <div class="input-group mb-1" *ngFor="let favorito of favoritosArr.controls; let i = index">
+
+                <input class="form-control"
+                      [formControlName]="i">
+                <button class="btn btn-outline-danger"
+                        type="button"
+                        (click)="eliminarCampo(i)">
+                        Delete
+                </button>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button class="btn btn-primary float-end" type="submit">
+                Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+
+<!-- <span>Persona</span>
+<pre>{{persona | json}}</pre> -->
+
+<h3>Valid</h3>
+<pre>{{miFormulario.valid}}</pre>
+
+<br>
+
+<h3>value</h3>
+<pre>{{miFormulario.value | json}}</pre>
+
+<br>
+
+<h3>Nuevo Fav</h3>
+<pre>{{nuevoFavorito.value | json}}</pre>
+
