--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,87 @@
-<h2>Template Basico</h2>
+<h2>Reactive Basico</h2>
+
+<div class="row">
+    <div class="col">
+
+        <form autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="guardar()">
+            <!-- PRODUCTO -->
+            <div class=" row">
+                <label class="col-sm col-form-label">Producto</label>
+                
+                <div class="col-sm-9"></div>
+
+                <input type="text"
+                       class="form-control"
+                       formControlName="nombre"
+                       minlength="3"
+                       placeholder="Nombre Del Producto">
+                       
+                <span class="form-text text-danger"
+                      *ngIf="mostrarError('nombre')">
+                      Debe Tener al Menos 3 Letras
+                </span>
+            </div>
+            <!-- PRECIO -->
+            <div class=" row">
+                <label class="col-sm col-form-label">Precio</label>
+                <div class="col-sm-9"></div>
+                <input type="number"
+                       class="form-control"
+                       formControlName="precio"
+                       placeholder="precio Del Producto"
+                       >
+               
+                <span class="form-text text-danger"
+                      *ngIf="mostrarError('precio')">
+                      Debe ser mayor a 0
+                </span>
+            </div>
+            <!-- EXISTENCIA -->
+            <div class=" row">
+                <label class="col-sm col-form-label">existencia</label>
+                <div class="col-sm-9"></div>
+                <input type="number"
+                       class="form-control"
+                       formControlName="existencias"
+                       placeholder="existencias Del Producto">
+                       <span class="form-text text-danger"
+                      *ngIf="mostrarError('existencias')">
+                      las existencias Deben ser mayor a 0
+                </span>
+            </div>
+
+            <div class="row mt-2">
+                <div class="col">
+                    <button type="submit" 
+                            class="btn btn-primary float-end"
+                        >
+                        Submit
+                    </button>
+                </div>
+            </div>
+
+        </form>
+    </div>
+</div>
+
+
+
+<div class="row">
+    <div class="col"> 
+
+        <span>Valid</span>
+        <pre> {{miFormulario.valid }}</pre>
+
+        <span>Pristine</span>
+        <pre> {{miFormulario.pristine }}</pre>
+
+        <span>Touched</span>
+        <pre> {{miFormulario.touched }}</pre>
+
+        <span>Value</span>
+        <pre> {{miFormulario.value  | json}}</pre>
+
+        <span>precio</span>
+        <pre> {{miFormulario.controls['precio'].errors  | json}}</pre>
+    </div>
+</div>
