--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,27 +1,27 @@
 <h2>Reactivos: Switches</h2>
 
-<form>
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
 
     <!-- radios -->
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Genero</label>
         <div class="col-sm-9">
             <div class="form-check">
-                <input class="form-check-input" 
-                       type="radio" 
+                <input class="form-check-input"
+                       type="radio"
                        value="M"
-                       name="radioGenero" 
-                       id="radioMasculino">
+                       id="radioMasculino"
+                       formControlName="genero">
                 <label class="form-check-label" for="flexRadioDefault1">
                   Masculino
                 </label>
               </div>
               <div class="form-check">
-                <input  class="form-check-input" 
-                        type="radio" 
+                <input  class="form-check-input"
+                        type="radio"
                         value="F"
-                        name="radioGenero" 
-                        id="radioFemenino">
+                        id="radioFemenino"
+                        formControlName="genero">
                 <label class="form-check-label" for="flexRadioDefault2">
                   Femenino
                 </label>
@@ -31,13 +31,14 @@
 
     <!-- Switches -->
     <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Notificaciones</label>   
+        <label class="col-sm-3 col-form-label">Notificaciones</label>
         <div class="col-sm-9">
             <div class="form-check form-switch mt-2">
-                <input class="form-check-input" 
-                       type="checkbox"  
-                       role="switch"   
-                       id="flexSwitchCheckChecked" >
+                <input class="form-check-input"
+                       type="checkbox"
+                       role="switch"
+                       id="flexSwitchCheckChecked"
+                       formControlName="notificaciones">
 
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
@@ -46,12 +47,13 @@
 
     <!-- check Box -->
     <div class="row mb-3">
-        <label class="col-sm-3 col-form-label"></label>   
+        <label class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <div class="form-check">
-                <input class="form-check-input" 
+                <input class="form-check-input"
                        type="checkbox"
-                       id="flexCheckDefault">
+                       id="flexCheckDefault"
+                       formControlName="condiciones">
 
                 <label class="form-check-label" for="flexCheckDefault">
                   Terminos y condiciones de uso
@@ -62,15 +64,15 @@
 
     <div class="col">
         <div class="row-sm-9">
-            <button class="btn btn-primary float-end">
+            <button class="btn btn-primary float-end"
+                    type="submit">
                      Guardar
             </button>
         </div>
     </div>
 </form>
 
-
-<!-- <h5>Valor del formulario</h5>
+<h5>Valor del formulario</h5>
 <pre>{{miFormulario.value | json}}</pre>
 <br>
 
@@ -83,8 +85,8 @@
 <pre>{{miFormulario.valid}}</pre>
 <br>
 
-<h5>Terminos</h5>
+<!-- <h5>Terminos</h5>
 <pre>{{miFormulario.controls['terminosYcondiciones'].errors| json}}</pre>
 <h5>terminos y condiciones</h5>
 <pre>{{terminosYcondicioes}}</pre>
-<br> -->
+<br>  -->
