--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -7,7 +7,6 @@
     </li>
 </ul>
 
- 
 <h2 class="mt-3">reactive</h2>
 <hr>
 <ul class="list-group mt-3">
@@ -15,3 +14,12 @@
         {{ruta.texto}}
     </li>
 </ul>
+
+<h2 class="mt-3">Validaciones</h2>
+<hr>
+<ul class="list-group mt-3">
+  <li class="list-group-item" *ngFor="let ruta of authMenu" [routerLink]="[ruta.ruta]" routerLinkActive="active" >
+      {{ruta.texto}}
+  </li>
+</ul>
+
